--- a/eng/Versions.props
+++ b/eng/Versions.props
@@ -1,2 +1,16 @@
 <Project>
+
+  <PropertyGroup>
+
+    <NetFrameworkMinimum>net462</NetFrameworkMinimum>
+    <NetFrameworkToolCurrent>net472</NetFrameworkToolCurrent>
+    
+    <NetCoreAppCurrentVersion>7.0</NetCoreAppCurrentVersion>
+    <NetCoreAppMinimum>net6.0</NetCoreAppMinimum>
+    <NetCoreAppLatestStableVersion>6.0</NetCoreAppLatestStableVersion>
+
+    <AspNetCoreAppCurrentVersion>7.0</AspNetCoreAppCurrentVersion>
+
+  </PropertyGroup>
+
 </Project>
