--- a/src/libraries/DependencyInjection.Abstractions/src/DependencyInjection.Abstractions.csproj
+++ b/src/libraries/DependencyInjection.Abstractions/src/DependencyInjection.Abstractions.csproj
@@ -1,10 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
+    <TargetFrameworks>netstandard2.1;$(NetFrameworkMinimum)</TargetFrameworks>
     <EnableDefaultItems>true</EnableDefaultItems>
     <IsPackable>true</IsPackable>
-    <EnableAOTAnalyzer>true</EnableAOTAnalyzer>
     <PackageDescription>Abstractions for dependency injection.</PackageDescription>
   </PropertyGroup>
 
