--- a/eng/Versions.props
+++ b/eng/Versions.props
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
 
+    <VersionPrefix>0.0.0</VersionPrefix>
+
     <NetFrameworkMinimum>net462</NetFrameworkMinimum>
     <NetFrameworkToolCurrent>net472</NetFrameworkToolCurrent>
     
