--- a/src/libraries/DependencyInjection.Abstractions/src/DependencyInjection.Abstractions.csproj
+++ b/src/libraries/DependencyInjection.Abstractions/src/DependencyInjection.Abstractions.csproj
@@ -5,6 +5,8 @@
     <EnableDefaultItems>true</EnableDefaultItems>
     <IsPackable>true</IsPackable>
     <PackageDescription>Abstractions for dependency injection.</PackageDescription>
+    <Product>Dependency Injection Precompiler</Product>
+    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
   </PropertyGroup>
 
 
