--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -5,20 +5,25 @@
 
   <PropertyGroup>
   
+    <!-- Version -->
     <VersionPrefix>0.0.0</VersionPrefix>
 
+    
+    <!-- Platforms -->
     <LibTargetFrameworks>netstandard2.1;net462</LibTargetFrameworks>
     <TestsTargetFrameworks>net462</TestsTargetFrameworks>
 
-  </PropertyGroup>
-
-  <!-- Package Info -->
-  <PropertyGroup>
-
+  
+    <!-- Package Info -->
     <GitHubOrhanizationName>ioc-dot-net</GitHubOrhanizationName>
     <GitHubRepositoryName>runtime</GitHubRepositoryName>
     <Product>Dependency Injection Precompiler</Product>
+
     <Owners>ENikS</Owners>
+    <Authors>$(Owners)</Authors>
+    <Company>$(Owners)</Company>
+    <Copyright>$(Owners)</Copyright>
+    <CopyrightMicrosoft>$(Owners)</CopyrightMicrosoft>
 
     <PackageLicenseExpression>MIT</PackageLicenseExpression> <!-- TDOD: Change -->
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
@@ -27,25 +32,14 @@
     <RepositoryUrl>https://github.com/$(GitHubOrhanizationName)/$(GitHubRepositoryName)</RepositoryUrl>
     <PackageProjectUrl>https://github.com/$(GitHubOrhanizationName)/tree/main/src/libraries/$(MSBuildProjectName)</PackageProjectUrl>
 
-
-    <Authors>$(Owners)</Authors>
-    <Company>$(Owners)</Company>
-    <Copyright>$(Owners)</Copyright>
-    <CopyrightMicrosoft>$(Owners)</CopyrightMicrosoft>
-
-  </PropertyGroup>
-
-  <PropertyGroup>
-    <!-- default to allowing all language features -->
+  
+    <!-- language features -->
     <LangVersion>preview</LangVersion>
     <AnalysisLevel>preview</AnalysisLevel>
+    <Nullable>enable</Nullable>
 
     <DebugType>portable</DebugType>
     <DebugSymbols>true</DebugSymbols>
-
-
-    <RestoreUseStaticGraphEvaluation>true</RestoreUseStaticGraphEvaluation>
-    <GenerateRestoreUseStaticGraphEvaluationBinlog>true</GenerateRestoreUseStaticGraphEvaluationBinlog>
 
     <!-- Disable source link when building locally. -->
     <DisableSourceLink Condition="'$(DisableSourceLink)' == '' and
@@ -53,9 +47,29 @@
                                   '$(OfficialBuildId)' == ''">true</DisableSourceLink>
 
 
+
+  </PropertyGroup>
+
+
+  <!-- Packaging -->
+  <ItemGroup Condition="'$(IsPackable)' == 'true'">
+    <!-- The sfxproj files add the license themselves. -->
+    <None Include="$(LicenseFile)"
+          PackagePath="$([System.IO.Path]::GetFileName('$(LicenseFile)'))"
+          Pack="true"
+          Condition="'$(MSBuildProjectExtension)' != '.sfxproj' and '$(MSBuildProjectFile)' != 'msi.csproj'" />
+    <None Include="$(PackageThirdPartyNoticesFile)"
+          PackagePath="$([System.IO.Path]::GetFileName('$(PackageThirdPartyNoticesFile)'))"
+          Pack="true" />
+  </ItemGroup>
+
+
+
+  <PropertyGroup>
+
     <ErrorReport>none</ErrorReport>
-    <!-- TODO: remove when fixed in .NET -->
-    <RuntimeIdGraphDefinitionFile>$([MSBuild]::NormalizePath('$(MSBuildThisFileDirectory)', 'eng', 'runtime.json'))</RuntimeIdGraphDefinitionFile>
+    <RestoreUseStaticGraphEvaluation>true</RestoreUseStaticGraphEvaluation>
+    <GenerateRestoreUseStaticGraphEvaluationBinlog>true</GenerateRestoreUseStaticGraphEvaluationBinlog>
 
   </PropertyGroup>
 
