--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -3,18 +3,15 @@
   <!-- Import the Arcade SDK -->
   <Import Project="Sdk.props" Sdk="Microsoft.DotNet.Arcade.Sdk" />
 
+  <!-- Platforms -->
   <PropertyGroup>
-  
-    <!-- Version -->
-    <VersionPrefix>0.0.0</VersionPrefix>
-
-    
-    <!-- Platforms -->
     <LibTargetFrameworks>netstandard2.1;net462</LibTargetFrameworks>
     <TestsTargetFrameworks>net462</TestsTargetFrameworks>
+  </PropertyGroup>
 
   
-    <!-- Package Info -->
+  <!-- Package.General -->
+  <PropertyGroup>
 
     <GitHubOrhanizationName>ioc-dot-net</GitHubOrhanizationName>
     <GitHubRepositoryName>runtime</GitHubRepositoryName>
@@ -32,12 +29,21 @@
     <RepositoryUrl>https://github.com/$(GitHubOrhanizationName)/$(GitHubRepositoryName)</RepositoryUrl>
     <PackageProjectUrl>https://github.com/$(GitHubOrhanizationName)/$(GitHubRepositoryName)/tree/main/src/libraries/$(MSBuildProjectName)</PackageProjectUrl>
 
+    <PackageIcon>$([MSBuild]::NormalizePath('$(MSBuildThisFileDirectory)', 'src', 'resources', 'package.png'))</PackageIcon>
+    <PackageReadmeFile>$([MSBuild]::NormalizePath('$(MSBuildThisFileDirectory)', 'src', 'libraries', $(MSBuildProjectName), 'README.md'))</PackageReadmeFile>
     <ApplicationIcon>$([MSBuild]::NormalizePath('$(MSBuildThisFileDirectory)', 'src', 'resources', 'package.ico'))</ApplicationIcon>
+
+  </PropertyGroup>
   
-    <!-- language features -->
+  <!-- language features -->
+  <PropertyGroup>
     <LangVersion>preview</LangVersion>
     <AnalysisLevel>preview</AnalysisLevel>
     <Nullable>enable</Nullable>
+  </PropertyGroup>
+
+  <!-- Debug   -->
+  <PropertyGroup>
 
     <DebugType>portable</DebugType>
     <DebugSymbols>true</DebugSymbols>
@@ -46,31 +52,7 @@
     <DisableSourceLink Condition="'$(DisableSourceLink)' == '' and
                                   '$(ContinuousIntegrationBuild)' != 'true' and
                                   '$(OfficialBuildId)' == ''">true</DisableSourceLink>
-
-
-
-  </PropertyGroup>
-
-
-  <!-- Packaging -->
-  <ItemGroup Condition="'$(IsPackable)' == 'true'">
-    <!-- The sfxproj files add the license themselves. -->
-    <None Include="$(LicenseFile)"
-          PackagePath="$([System.IO.Path]::GetFileName('$(LicenseFile)'))"
-          Pack="true"
-          Condition="'$(MSBuildProjectExtension)' != '.sfxproj' and '$(MSBuildProjectFile)' != 'msi.csproj'" />
-    <None Include="$(PackageThirdPartyNoticesFile)"
-          PackagePath="$([System.IO.Path]::GetFileName('$(PackageThirdPartyNoticesFile)'))"
-          Pack="true" />
-  </ItemGroup>
-
-
-
-  <PropertyGroup>
-
     <ErrorReport>none</ErrorReport>
-    <RestoreUseStaticGraphEvaluation>true</RestoreUseStaticGraphEvaluation>
-    <GenerateRestoreUseStaticGraphEvaluationBinlog>true</GenerateRestoreUseStaticGraphEvaluationBinlog>
 
   </PropertyGroup>
 
