--- a/eng/Versions.props
+++ b/eng/Versions.props
@@ -1,13 +1,19 @@
 <Project>
+    
+  <!-- The product branding version -->
   <PropertyGroup>
-    <!-- The product branding version -->
     <VersionPrefix>0.0.0</VersionPrefix>
 
   </PropertyGroup>
 
+  <!-- Libraries dependencies -->
   <PropertyGroup>
-    <!-- Libraries dependencies -->
     <SystemComponentModelAnnotationsVersion>5.0.0</SystemComponentModelAnnotationsVersion>
-    <!-- Testing -->
   </PropertyGroup>
+  
+  
+  <!-- Testing -->
+  <PropertyGroup>
+  </PropertyGroup>
+  
 </Project>
