--- a/.github/workflows/cd-flow.yml
+++ b/.github/workflows/cd-flow.yml
@@ -11,43 +11,21 @@ jobs:
 
   build:
     runs-on: windows-latest
-    env:
-      PackageName: 'DI.Precompiler'
-      PackageOutputPath: '${{ github.workspace }}\package'
-      TargetFramework: 'netcoreapp3.1'
 
     steps:
-
-    - name: Setup MSBuild
-      uses: microsoft/setup-msbuild@v1
-
     - name: Checkout
-      uses: actions/checkout@v2
+      uses: actions/checkout
       with:
         fetch-depth: 0
 
     - name: Label Fixed Issues
       uses: gh-bot/fix-labeler@master        
 
-    - name: Install GitVersion
-      uses: gittools/actions/gitversion/setup@v0.9.10
-      with:
-        versionSpec: '5.x'
-
-    - name: Git Version
-      id:   gitversion
-      uses: gittools/actions/gitversion/execute@v0.9.10
-      with:
-        useConfigFile: true
-        configFilePath: '.github\GitVersion.yml'
-        additionalArguments: '/showConfig'
-
-    # - name: Build
-    #   env:
-    #     Version: '${{ steps.gitversion.outputs.fullSemVer }}'
-    #     Configuration: 'Release'
-    #   run: | 
-    #     msbuild -verbosity:m -restore:True ${{ github.workspace }}\${{ env.PackageName }}.sln
+    - name: Build
+      env:
+        Configuration: 'Release'
+      run: | 
+        dotnet build
   
     # - name: Publish Local Package
     #   run: |
