--- a/.github/workflows/cd-flow.yml
+++ b/.github/workflows/cd-flow.yml
@@ -25,8 +25,7 @@ jobs:
       env:
         Configuration: 'Release'
       run: | 
-        dotnet restore
-        dotnet build
+        msbuild
   
     # - name: Publish Local Package
     #   run: |
