--- a/.github/workflows/cd-flow.yml
+++ b/.github/workflows/cd-flow.yml
@@ -21,12 +21,13 @@ jobs:
     - name: Label Fixed Issues
       uses: gh-bot/fix-labeler@master        
 
-    - name: Build
+    - name: Add msbuild to PATH
+      uses: microsoft/setup-msbuild@v1.1
+
+    - name: Build app for release
       env:
         Configuration: 'Release'
-      run: | 
-        msbuild
-  
+      run: msbuild /bl
     # - name: Publish Local Package
     #   run: |
     #     dotnet nuget add source "https://nuget.pkg.github.com/unitycontainer/index.json" -n github -u unitycontainer -p ${{secrets.GITHUB_TOKEN}} --store-password-in-clear-text
