--- a/.github/workflows/cd-flow.yml
+++ b/.github/workflows/cd-flow.yml
@@ -18,6 +18,9 @@ jobs:
       with:
         fetch-depth: 0
 
+    - name: Install .NET SDK
+      uses: actions/setup-dotnet@v1
+
     - name: Label Fixed Issues
       uses: gh-bot/fix-labeler@master        
 
@@ -28,6 +31,7 @@ jobs:
       env:
         Configuration: 'Release'
       run: msbuild /bl
+
     # - name: Publish Local Package
     #   run: |
     #     dotnet nuget add source "https://nuget.pkg.github.com/unitycontainer/index.json" -n github -u unitycontainer -p ${{secrets.GITHUB_TOKEN}} --store-password-in-clear-text
