--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -3,38 +3,16 @@
   <!-- Import the Arcade SDK -->
   <Import Project="Sdk.props" Sdk="Microsoft.DotNet.Arcade.Sdk" />
 
+  <!-- Package Info -->
+  <Import Project="$(RepositoryEngineeringDir)Package.props" />
+
   <!-- Platforms -->
   <PropertyGroup>
     <LibTargetFrameworks>netstandard2.1;net462</LibTargetFrameworks>
     <TestsTargetFrameworks>net462</TestsTargetFrameworks>
   </PropertyGroup>
 
-  
-  <!-- Package.General -->
-  <PropertyGroup>
-
-    <GitHubOrhanizationName>ioc-dot-net</GitHubOrhanizationName>
-    <GitHubRepositoryName>runtime</GitHubRepositoryName>
-    <Product>Dependency Injection Precompiler</Product>
-    <Owners>ENikS</Owners>
-    <Authors>$(Owners)</Authors>
-    <Company>$(Owners)</Company>
-    <Copyright>$(Owners)</Copyright>
-    <CopyrightMicrosoft>$(Owners)</CopyrightMicrosoft>
-
-    <PackageLicenseExpression>MIT</PackageLicenseExpression> <!-- TDOD: Change -->
-    <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
-    <LicenseFile>$([MSBuild]::NormalizePath('$(MSBuildThisFileDirectory)', 'LICENSE.TXT'))</LicenseFile>
-    <PackageThirdPartyNoticesFile>$([MSBuild]::NormalizePath('$(MSBuildThisFileDirectory)', 'THIRD-PARTY-NOTICES.TXT'))</PackageThirdPartyNoticesFile>
-    <RepositoryUrl>https://github.com/$(GitHubOrhanizationName)/$(GitHubRepositoryName)</RepositoryUrl>
-    <PackageProjectUrl>https://github.com/$(GitHubOrhanizationName)/$(GitHubRepositoryName)/tree/main/src/libraries/$(MSBuildProjectName)</PackageProjectUrl>
-
-    <!-- <PackageIcon>$([MSBuild]::NormalizePath('$(RepoRoot)', 'src', 'resources', 'package.png'))</PackageIcon> -->
-    <PackageReadmeFile>$([MSBuild]::NormalizePath('$(MSBuildThisFileDirectory)', 'src', 'libraries', $(MSBuildProjectName), 'README.md'))</PackageReadmeFile>
-    <ApplicationIcon>$([MSBuild]::NormalizePath('$(MSBuildThisFileDirectory)', 'src', 'resources', 'package.ico'))</ApplicationIcon>
-
-  </PropertyGroup>
-  
+    
   <!-- language features -->
   <PropertyGroup>
     <LangVersion>preview</LangVersion>
