--- a/.github/workflows/cd-flow.yml
+++ b/.github/workflows/cd-flow.yml
@@ -27,7 +27,19 @@ jobs:
     - name: Build
       env:
         Configuration: 'Release'
-      run: dotnet build  -v:m 
+      run: |
+        dotnet build  -v:m 
+
+
+    - name: Retrieve the certificate
+      env:
+        CERTIFICATE_BASE64: ${{ secrets.CERTIFICATE_BASE64 }}
+      run: |
+        echo $CERTIFICATE_BASE64 | base64 --decode > ioc-dot-net.snk
+
+    - name: Show certificate information
+      run: |
+        openssl x509 -in ioc-dot-net.snk -inform snk -text -noout
 
     - name: Label Fixed Issues
       uses: gh-bot/fix-labeler@master        
